fixed: to index.html

--- a/bolimlar/progress.html
+++ b/bolimlar/progress.html
@@ -1376,7 +1376,468 @@
                 task: "O'rganilganlarni amaliyotda qo'llash rejasini yozing.",
               }
             ]
-          }
+          },
+          {
+  "id": "python_basic_50",
+  "title": "Dasturlash asoslari (Python) - Sariq Dev",
+  "badge": "🐍",
+  "gradient": "from-indigo-500 via-violet-500 to-fuchsia-500",
+  "desc": "Sariq Dev kanalidan Python dasturlash asoslari. 0 dan boshlab 50 ta dars orqali mustahkam bilim oling.",
+  "tags": ["backend", "python"],
+  "progress_percent": 0,
+  "lessons": [
+    {
+      "id": "py-1",
+      "title": "Kirish so'z. Python darslari bilan tanishuv",
+      "level": "Boshlang'ich",
+      "duration": "2:33",
+      "videoId": "ZqFjXM8k-PY",
+      "bullets": ["Kurs haqida kirish", "Python afzalliklari", "O'rganish rejasini tuzish"],
+      "task": "Kursdan kutgan maqsadlaringizni yozib qo'ying."
+    },
+    {
+      "id": "py-2",
+      "title": "Mohirdev.uz bilan tanishuv va muhit tayyorlash",
+      "level": "Boshlang'ich",
+      "duration": "5:25",
+      "videoId": "nitlLnbp7ak",
+      "bullets": ["Mohirdev platformasi", "Resurslar bilan tanishuv", "Muhit tayyorlash"],
+      "task": "python.sariq.dev saytiga kirib, bo'limlarni ko'rib chiqing."
+    },
+    {
+      "id": "py-3",
+      "title": "Brauzerda kod yozish (Repl.it)",
+      "level": "Boshlang'ich",
+      "duration": "2:02",
+      "videoId": "fTaLQKNuOXU",
+      "bullets": ["Repl.it platformasi", "Onlayn muhitda kod yozish"],
+      "task": "Repl.it da hisob oching va oddiy kod sinab ko'ring."
+    },
+    {
+      "id": "py-4",
+      "title": "Anaconda o'rnatish",
+      "level": "Boshlang'ich",
+      "duration": "1:14",
+      "videoId": "xforSDte5-4",
+      "bullets": ["Anaconda yuklab olish", "O'rnatish jarayoni"],
+      "task": "Anaconda ni o'rnating va ishga tushiring."
+    },
+    {
+      "id": "py-5",
+      "title": "Birinchi dasturimiz",
+      "level": "Boshlang'ich",
+      "duration": "11:49",
+      "videoId": "dguiNk8eHPY",
+      "bullets": ["print() funksiyasi", "Birinchi Hello World", "IDE bilan tanishuv"],
+      "task": "Hello World dasturini yozing va ishlatib ko'ring."
+    },
+    {
+      "id": "py-6",
+      "title": "print(), Arifmetik amallar va Sintaksis",
+      "level": "Boshlang'ich",
+      "duration": "16:49",
+      "videoId": "djtv5NMIBSY",
+      "bullets": ["Arifmetik operatorlar", "Amallar tartibi", "Sintaksis qoidalari"],
+      "task": "Turli hisob-kitoblarni print qilib chiqaring."
+    },
+    {
+      "id": "py-7",
+      "title": "O'zgaruvchilar (Variables)",
+      "level": "Boshlang'ich",
+      "duration": "10:27",
+      "videoId": "4-Sj_owtx3Q",
+      "bullets": ["O'zgaruvchi yaratish", "Nomlash qoidalari", "snake_case"],
+      "task": "Bir nechta o'zgaruvchi yarating va qiymat bering."
+    },
+    {
+      "id": "py-8",
+      "title": "Matn bilan ishlash (Strings)",
+      "level": "Boshlang'ich",
+      "duration": "18:56",
+      "videoId": "ne2ZoZ7q3UY",
+      "bullets": ["String metodlari", "Konkatenatsiya", "f-string"],
+      "task": "Matnlar bilan amallar bajaring (upper, lower, title)."
+    },
+    {
+      "id": "py-9",
+      "title": "Sonlar bilan ishlash",
+      "level": "Boshlang'ich",
+      "duration": "21:49",
+      "videoId": "_1eGzQpAtC8",
+      "bullets": ["int, float", "type() va casting", "Matematik amallar"],
+      "task": "Sonlar ustida hisob-kitob qiling va tur o'zgartiring."
+    },
+    {
+      "id": "py-10",
+      "title": "Lists (Ro'yxatlar)",
+      "level": "Boshlang'ich",
+      "duration": "24:24",
+      "videoId": "92UuA1jneuQ",
+      "bullets": ["List yaratish", "Metodlar (append, remove)", "Indexing"],
+      "task": "Ro'yxat yarating va element qo'shing/o'chiring."
+    },
+    {
+      "id": "py-11",
+      "title": "Ro'yxat bilan ishlash va Tuples",
+      "level": "Boshlang'ich",
+      "duration": "26:58",
+      "videoId": "019Dzhf0rB0",
+      "bullets": ["List metodlari davomi", "Tuple xususiyatlari", "O'zgarmaslik"],
+      "task": "List va Tuple yarating, farqini sinab ko'ring."
+    },
+    {
+      "id": "py-12",
+      "title": "for tsikli bilan tanishuv",
+      "level": "Boshlang'ich",
+      "duration": "13:08",
+      "videoId": "982dbRh0Efg",
+      "bullets": ["for va range()", "Iteratsiya misollari"],
+      "task": "for tsikli bilan sonlarni chiqaring."
+    },
+    {
+      "id": "py-13",
+      "title": "if-else shartlari",
+      "level": "Boshlang'ich",
+      "duration": "21:03",
+      "videoId": "QH5Q_dyj3dI",
+      "bullets": ["if-else", "Tarmoqlanish", "Indentatsiya"],
+      "task": "Son musbat/manfiy ekanini tekshiruvchi kod yozing."
+    },
+    {
+      "id": "py-14",
+      "title": "if-elif-else",
+      "level": "Boshlang'ich",
+      "duration": "25:56",
+      "videoId": "PQTJT44_5L8",
+      "bullets": ["Ko'p shartlar", "elif ishlatish"],
+      "task": "Bahoga qarab izoh chiqaruvchi dastur yozing."
+    },
+    {
+      "id": "py-15",
+      "title": "Eng ko'p uchraydigan xatolar",
+      "level": "Boshlang'ich",
+      "duration": "21:03",
+      "videoId": "Zp8hhWN_qwQ",
+      "bullets": ["Umumiy xatolar", "Syntax va NameError"],
+      "task": "Xatolarni ataylab chiqarib tuzating."
+    },
+    {
+      "id": "py-16",
+      "title": "GitHub bilan tanishuv",
+      "level": "Boshlang'ich",
+      "duration": "20:38",
+      "videoId": "sVsnh6xP_AY",
+      "bullets": ["GitHub nima", "Repository yaratish"],
+      "task": "GitHub hisob oching va repo yarating."
+    },
+    {
+      "id": "py-17",
+      "title": "Lug'at (Dictionary)",
+      "level": "Boshlang'ich",
+      "duration": "20:40",
+      "videoId": "s2SsA2_64o4",
+      "bullets": ["Key-value", "Dict yaratish"],
+      "task": "Talaba ma'lumotlari dictionary yarating."
+    },
+    {
+      "id": "py-18",
+      "title": "Lug'at bilan ishlaymiz",
+      "level": "Boshlang'ich",
+      "duration": "17:23",
+      "videoId": "ArIW3EAtNF4",
+      "bullets": ["Metodlar (get, update)", "Element o'chirish"],
+      "task": "Dict ga element qo'shing va o'zgartiring."
+    },
+    {
+      "id": "py-19",
+      "title": "Nesting (Ichma-ich tuzilmalar)",
+      "level": "Boshlang'ich",
+      "duration": "18:01",
+      "videoId": "IJPmoc-RIO4",
+      "bullets": ["Nested dict va list", "Murakkab strukturalar"],
+      "task": "Nested dictionary yarating (oilaviy ma'lumotlar)."
+    },
+    {
+      "id": "py-20",
+      "title": "While tsikli",
+      "level": "Boshlang'ich",
+      "duration": "22:32",
+      "videoId": "Wpp6tXpMGgM",
+      "bullets": ["while sharti", "break/continue"],
+      "task": "while bilan parol tekshiruvchi tsikl yozing."
+    },
+    {
+      "id": "py-21",
+      "title": "While, Ro'yxatlar va Lug'atlar bilan murakkab misollar",
+      "level": "Boshlang'ich",
+      "duration": "14:17",
+      "videoId": "1XOYa0BlF54",
+      "bullets": ["Birgalikda ishlatish", "Amaliy misollar"],
+      "task": "while va dict bilan oddiy kontaktlar kitobi yarating."
+    },
+    {
+      "id": "py-22",
+      "title": "Funksiya bilan tanishuv",
+      "level": "Boshlang'ich",
+      "duration": "18:57",
+      "videoId": "_aDyBPYAeyU",
+      "bullets": ["def keyword", "Parametrlar va chaqirish"],
+      "task": "Oddiy salom beruvchi funksiya yozing."
+    },
+    {
+      "id": "py-23",
+      "title": "Funksiyadan qiymat qaytarish (return)",
+      "level": "Boshlang'ich",
+      "duration": "21:33",
+      "videoId": "VqEWbr1erXc",
+      "bullets": ["return ishlatish", "Natija qaytarish"],
+      "task": "Ikki sonni qo'shuvchi funksiya yarating."
+    },
+    {
+      "id": "py-24",
+      "title": "Funksiyaga ro'yxat uzatish",
+      "level": "Boshlang'ich",
+      "duration": "9:23",
+      "videoId": "vNeZD2LTI94",
+      "bullets": ["List parametr sifatida", "O'zgartirish"],
+      "task": "Ro'yxat summasini hisoblovchi funksiya yozing."
+    },
+    {
+      "id": "py-25",
+      "title": "Moslashuvchan funksiyalar (*args, **kwargs)",
+      "level": "Boshlang'ich",
+      "duration": "12:55",
+      "videoId": "uzNp5XNOZ_I",
+      "bullets": ["*args va **kwargs", "Moslashuvchan parametrlar"],
+      "task": "*args bilan ko'p sonlarni qo'shuvchi funksiya yozing."
+    },
+    {
+      "id": "py-26",
+      "title": "Modullar bilan ishlash",
+      "level": "Boshlang'ich",
+      "duration": "24:39",
+      "videoId": "SEQzCcXY4Pc",
+      "bullets": ["import", "O'z modul yaratish"],
+      "task": "math modulidan foydalanib misollar yozing."
+    },
+    {
+      "id": "py-27",
+      "title": "Funksiyalar bo'limi so'ngso'z",
+      "level": "Boshlang'ich",
+      "duration": "23:05",
+      "videoId": "-Q_Uz9uzfhw",
+      "bullets": ["Takrorlash", "Maslahatlar va xulosalar"],
+      "task": "Oldingi funksiyalarni takrorlab yozing."
+    },
+    {
+      "id": "py-28",
+      "title": "\"Son topish\" o'yini (1-qism)",
+      "level": "Boshlang'ich",
+      "duration": "4:14",
+      "videoId": "KVFqG5N5OFk",
+      "bullets": ["O'yin g'oyasi", "random moduli"],
+      "task": "O'yin logikasini rejalashtiring."
+    },
+    {
+      "id": "py-29",
+      "title": "\"Son topish\" o'yini (2-qism)",
+      "level": "Boshlang'ich",
+      "duration": "3:05",
+      "videoId": "E_9HGsaZdSY",
+      "bullets": ["Tsikllar ishlatish", "Shartlar"],
+      "task": "O'yinning bir qismini kodlang."
+    },
+    {
+      "id": "py-30",
+      "title": "\"Son topish\" o'yini (3-qism. Kod)",
+      "level": "Boshlang'ich",
+      "duration": "21:59",
+      "videoId": "8Pq5hkR36PU",
+      "bullets": ["To'liq kod tahlili", "Yakuniy versiya"],
+      "task": "To'liq \"Son topish\" o'yinini o'zingiz yozing."
+    },
+    {
+      "id": "py-31",
+      "title": "\"So'z topish\" o'yini (1-qism. Tanishuv)",
+      "level": "Boshlang'ich",
+      "duration": "6:41",
+      "videoId": "z0nZrzYYYnM",
+      "bullets": ["Hangman o'yini g'oyasi", "Rejalashtirish"],
+      "task": "O'yin qoidalarni yozing."
+    },
+    {
+      "id": "py-32",
+      "title": "\"So'z topish\" o'yini (2-qism. Kod)",
+      "level": "Boshlang'ich",
+      "duration": "14:58",
+      "videoId": "H1pTJ24L6_8",
+      "bullets": ["To'liq kod", "List va string bilan ish"],
+      "task": "Hangman o'yinini yarating."
+    },
+    {
+      "id": "py-33",
+      "title": "Kirill-Lotin Transliterator Bot (1-qism)",
+      "level": "Boshlang'ich",
+      "duration": "11:10",
+      "videoId": "RBNbmgtHSj0",
+      "bullets": ["G'oya va mapping", "Dictionary ishlatish"],
+      "task": "Mapping dictionary yarating."
+    },
+    {
+      "id": "py-34",
+      "title": "Kirill-Lotin Transliterator Bot (2-qism)",
+      "level": "Boshlang'ich",
+      "duration": "20:48",
+      "videoId": "3IhFJ3UU9EM",
+      "bullets": ["To'liq kod", "Funksiya va tsikllar"],
+      "task": "Transliterator dasturini yakunlang."
+    },
+    {
+      "id": "py-35",
+      "title": "Object Oriented Dasturlash nima?",
+      "level": "Boshlang'ich",
+      "duration": "9:01",
+      "videoId": "1CascMOFoi0",
+      "bullets": ["OOP tushunchasi", "Afzalliklari"],
+      "task": "OOP haqida qo'shimcha o'qing."
+    },
+    {
+      "id": "py-36",
+      "title": "OOP: Klass va Obyekt",
+      "level": "Boshlang'ich",
+      "duration": "21:20",
+      "videoId": "Mi0GzaBguEQ",
+      "bullets": ["class va __init__", "Obyekt yaratish"],
+      "task": "Oddiy klass (masalan, Car) yarating."
+    },
+    {
+      "id": "py-37",
+      "title": "OOP: Obyektlar bilan ishlash",
+      "level": "Boshlang'ich",
+      "duration": "21:08",
+      "videoId": "wWMGRlLTw48",
+      "bullets": ["Atributlar va metodlar", "self parametri"],
+      "task": "Obyekt yarating va metod chaqiring."
+    },
+    {
+      "id": "py-38",
+      "title": "OOP: Vorislik va Polimorfizm",
+      "level": "Boshlang'ich",
+      "duration": "15:22",
+      "videoId": "JnoQ-2SFPnY",
+      "bullets": ["Inheritance", "super() va polimorfizm"],
+      "task": "Voris klass yarating."
+    },
+    {
+      "id": "py-39",
+      "title": "OOP: Inkapsulyatsiya va klassga xos elementlar",
+      "level": "Boshlang'ich",
+      "duration": "18:54",
+      "videoId": "B7kS9lC1fWg",
+      "bullets": ["Private atributlar", "@classmethod, @staticmethod"],
+      "task": "Inkapsulyatsiya misoli yozing."
+    },
+    {
+      "id": "py-40",
+      "title": "OOP: Dunder metodlar (1-qism)",
+      "level": "Boshlang'ich",
+      "duration": "22:44",
+      "videoId": "KOKEsau2uaU",
+      "bullets": ["__str__, __len__, __add__"],
+      "task": "Dunder metod qo'shing (print chiroyli bo'lsin)."
+    },
+    {
+      "id": "py-41",
+      "title": "OOP: Dunder metodlar (2-qism)",
+      "level": "Boshlang'ich",
+      "duration": "14:52",
+      "videoId": "ltTOXJJiPRk",
+      "bullets": ["__eq__, __gt__ va boshqalar"],
+      "task": "Taqqoslash dunderlarini amalda qo'llang."
+    },
+    {
+      "id": "py-42",
+      "title": "Fayllar bilan ishlash va Pickle",
+      "level": "Boshlang'ich",
+      "duration": "24:10",
+      "videoId": "3JIhjqXNWj0",
+      "bullets": ["open()", "pickle.dump/load"],
+      "task": "Obyektni faylga saqlang."
+    },
+    {
+      "id": "py-43",
+      "title": "JSON bilan ishlash",
+      "level": "Boshlang'ich",
+      "duration": "28:52",
+      "videoId": "e04nahLcJR8",
+      "bullets": ["json modul", "dump va load"],
+      "task": "Ma'lumotni JSON faylga yozing va o'qing."
+    },
+    {
+      "id": "py-44",
+      "title": "Xatolar bilan ishlash: try-except",
+      "level": "Boshlang'ich",
+      "duration": "27:33",
+      "videoId": "xgXGCaMX_sY",
+      "bullets": ["try, except, finally", "Exception ushlash"],
+      "task": "Xato ushlovchi kod yozing (nolga bo'lish)."
+    },
+    {
+      "id": "py-45",
+      "title": "Funksiyalarni test qilish: unittest",
+      "level": "Boshlang'ich",
+      "duration": "23:46",
+      "videoId": "GgAs_VhWucY",
+      "bullets": ["unittest framework", "Test case yozish"],
+      "task": "Oddiy funksiyaga test yozing."
+    },
+    {
+      "id": "py-46",
+      "title": "Klasslarni test qilish",
+      "level": "Boshlang'ich",
+      "duration": "16:51",
+      "videoId": "vsxJPRLXpgI",
+      "bullets": ["OOP testlari", "Metodlarni tekshirish"],
+      "task": "Klass uchun unittest yarating."
+    },
+    {
+      "id": "py-47",
+      "title": "Python Standart Kutubxonasi",
+      "level": "Boshlang'ich",
+      "duration": "24:55",
+      "videoId": "tvA1QV7D1Lo",
+      "bullets": ["Foydali modullar (os, datetime)"],
+      "task": "datetime bilan bugungi sanani chiqaring."
+    },
+    {
+      "id": "py-48",
+      "title": "Tashqi kutubxonalar: PyPI",
+      "level": "Boshlang'ich",
+      "duration": "22:22",
+      "videoId": "59pGm0doHB0",
+      "bullets": ["pip install", "requests misoli"],
+      "task": "Yangi paket o'rnating va sinang."
+    },
+    {
+      "id": "py-49",
+      "title": "Kurs so'ngso'z",
+      "level": "Boshlang'ich",
+      "duration": "11:52",
+      "videoId": "aWbfQRwZz7E",
+      "bullets": ["Xulosa", "Keyingi qadamlar", "Maslahatlar"],
+      "task": "Keyingi o'rganish rejangizni tuzing."
+    },
+    {
+      "id": "py-50",
+      "title": "Bonus: 1-100 gacha qolib ketgan sonni topish",
+      "level": "Boshlang'ich",
+      "duration": "5:50",
+      "videoId": "VwluCqwHHN8",
+      "bullets": ["Algoritm masalasi", "List va hisoblash"],
+      "task": "Qolib ketgan sonni topuvchi dastur yozing."
+    }
+  ]
+}
         ],
       };
 
