--- a/Frontend/bolimlar/settings.html
+++ b/Frontend/bolimlar/settings.html
@@ -155,7 +155,7 @@
 
   <!-- JAVASCRIPT (mantiq o‘sha-o‘sha, faqat rasm URL’lari yangilangan) -->
 <script>
-const API = "http://127.0.0.1:8000";
+const API = "https://api.riseuply.uz";
 const token = localStorage.getItem("access"); // используем твой токен
 
 function authHeader() {
