--- a/Frontend/bolimlar/task.html
+++ b/Frontend/bolimlar/task.html
@@ -238,7 +238,7 @@
 
 <script>
 // ===================== API CONFIG =====================
-const API_BASE = 'http://127.0.0.1:8000/api';
+const API_BASE = 'https://api.riseuply.uz/api';
 const TASKS_ENDPOINT = `${API_BASE}/tasks/`;
 const CREATE_TASK_ENDPOINT = `${API_BASE}/tasks/create/`;
 const AUTH_REFRESH_ENDPOINT = `${API_BASE}/auth/refresh/`;
