--- a/Frontend/bolimlar/settings.html
+++ b/Frontend/bolimlar/settings.html
@@ -155,7 +155,7 @@
 
   <!-- JAVASCRIPT (mantiq o‘sha-o‘sha, faqat rasm URL’lari yangilangan) -->
 <script>
-const API = "https://api.riseuply.uz";
+const API = "https://riseup-back-production.up.railway.app";
 const token = localStorage.getItem("access"); // используем твой токен
 
 function authHeader() {
