--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -204,7 +204,7 @@
     ru: { boost_title: "Повысьте свою продуктивность", boost_desc: "Присоединяйтесь к тысячам...", task_mgmt: "Управление задачами", goal_track: "Отслеживание целей", team_collab: "Командное сотрудничество", welcome_back: "Добро пожаловать", signin_continue: "Войдите, чтобы продолжить путь продуктивности", login: "Войти", register: "Регистрация", full_name: "Полное имя", email: "Электронная почта", password: "Пароль", confirm_password: "Подтвердите пароль", sign_in: "Войти", sign_up: "Зарегистрироваться" }
   };
 
-  const API_BASE = 'http://api,riseuply.uz/api/auth';
+  const API_BASE = 'https://riseup-back-production.up.railway.app/api/auth';
 
   // Query DOM once (with guards)
   const body = document.body;
