--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -386,7 +386,7 @@
     // 🔧 BACKEND manzilingni shu yerga yoz:
     // local django: http://127.0.0.1:8000/api
     // production: https://your-domain.uz/api
-    const API_BASE = "https://api.riseuply.uz/api";
+    const API_BASE = "https://riseup-back-production.up.railway.app";
 
     document.addEventListener('DOMContentLoaded', () => {
       const btn = document.getElementById('goDashboardBtn');
