--- a/admin/admin.html
+++ b/admin/admin.html
@@ -513,15 +513,20 @@
 /* ======================================================
    RISEUP ADMIN — CLEAN + PRO UI (keeps your logic)
    ====================================================== */
+const isLocal =
+  location.hostname === "127.0.0.1" ||
+  location.hostname === "localhost";
 
-const isLocalPreview = /:(5500|5501)$/.test(window.location.origin || '');
-const API_ORIGIN = (window.location.origin || '').startsWith('http') && !isLocalPreview
-  ? window.location.origin
-  : 'https://riseup-back-production.up.railway.app';
+const API_ORIGIN = isLocal
+  ? "http://127.0.0.1:8000"
+  : "https://riseup-back-production.up.railway.app";
+
 const API_ROOT = `${API_ORIGIN}/api`;
 const API_BASE = `${API_ROOT}/admin`;
+
 let dashboardInterval = null;
 let realtimeInterval = null;
+
 
 /* ==============================
    AUTH
