--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Google Search -->
-    
+    <meta name="google-site-verification" content="WBTkUC8mZXiR20VyMOiH6C2M8vE58tMLgKSKoXj-oIM" />
     <title>RiseUply — Plan, Learn, Track</title>
     <meta
       name="description"
