--- a/bolimlar/progress.html
+++ b/bolimlar/progress.html
@@ -764,11 +764,11 @@
 
             return `
               <button onclick="app.yonalishOch('${d.id}')"
-                class="group text-left rounded-2xl border border-slate-700/70 bg-slate-900/55 overflow-hidden shadow-lg shadow-slate-950/70 hover:border-sky-400/60 hover:-translate-y-[2px] transition-all duration-300">
+                class="group text-left rounded-2xl border border-slate-700/70 bg-slate-900/55 overflow-hidden shadow-lg shadow-slate-950/70 hover:border-sky-400/60 hover:-translate-y-[2px] transition-all">
                 <div class="relative h-44 overflow-hidden">
                   ${
                     cover
-                      ? `<img src="${cover}" alt="${d.title}" class="absolute inset-0 w-full h-full object-cover scale-[1.03] group-hover:scale-[1.07] transition duration-300" onerror="this.style.display='none'">`
+                      ? `<img src="${cover}" alt="${d.title}" class="absolute inset-0 w-full h-full object-cover scale-[1.03] group-hover:scale-[1.07] transition" onerror="this.style.display='none'">`
                       : ``
                   }
                   <div class="absolute inset-0 bg-gradient-to-br ${gradient} ${
