--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="uz">
+  <!-- FAVICON -->
+  <link rel="icon" type="image/png" href="/rasmlar/dark.png?v=1" />
+  <link rel="apple-touch-icon" href="/rasmlar/dark.png?v=1" />
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
