--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
       name="google-site-verification"
       content="WBTkUC8mZXiR20VyMOiH6C2M8vE58tMLgKSKoXj-oIM"
     />
-    <title>RiseUp — Reja, o‘rganish, kuzatish</title>
+
+    <!-- SEO -->
+    <title>RiseUply — Reja, o‘rganish, kuzatish</title>
     <meta
       name="description"
-      content="RiseUp — kurslar, vazifalar, progress va statistika. Telegram bot bilan integratsiya. Talabalar uchun yagona platforma."
+      content="RiseUply — kurslar, vazifalar, progress va statistika. Telegram bot integratsiyasi. Talabalar uchun yagona platforma."
     />
     <meta name="robots" content="index,follow" />
     <link rel="canonical" href="https://riseuply.vercel.app/" />
     <meta http-equiv="content-language" content="uz" />
 
-    <meta property="og:title" content="RiseUp — Reja, o‘rganish, kuzatish" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="RiseUply — Reja, o‘rganish, kuzatish" />
     <meta
       property="og:description"
-      content="Kurslar, vazifalar, progress va statistika. Telegram bot integratsiyasi. Talabalar uchun yagona platforma."
+      content="RiseUply — kurslar, vazifalar, progress va statistika. Telegram bot integratsiyasi. Talabalar uchun yagona platforma."
     />
     <meta property="og:url" content="https://riseuply.vercel.app/" />
     <meta property="og:type" content="website" />
-
     <meta
       property="og:image"
       content="https://riseuply.vercel.app/rasmlar/darkrise.png"
@@ -41,23 +43,29 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="RiseUp — Reja, o‘rganish, kuzatish" />
+    <meta name="twitter:title" content="RiseUply — Reja, o‘rganish, kuzatish" />
     <meta
       name="twitter:description"
-      content="Kurslar, vazifalar, progress va statistika. Telegram bot integratsiyasi."
+      content="RiseUply — kurslar, vazifalar, progress va statistika. Telegram bot integratsiyasi."
     />
     <meta
       name="twitter:image"
       content="https://riseuply.vercel.app/rasmlar/darkrise.png"
     />
 
+    <!-- hreflang -->
     <link rel="alternate" hreflang="uz" href="https://riseuply.vercel.app/" />
     <link
       rel="alternate"
       hreflang="x-default"
       href="https://riseuply.vercel.app/"
     />
+
+    <!-- Favicon (tavsiya) -->
+    <link rel="icon" type="image/png" href="/rasmlar/dark.png?v=1" />
+    <link rel="apple-touch-icon" href="/rasmlar/dark.png?v=1" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
