--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,7 @@
     <title>RiseUp</title>
     <link rel="shortcut icon" href="rasmlar/dark.png" type="image/x-icon" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="base.js"></script>
     <script>
       tailwind.config = {
         theme: {
